py = import('python').find_installation(pure: false, modules: 'numba')

src_py = [
    'complex_dz.py',
    'integral_dz.py',
    'matrix_dz.py',
    'merge_parallel.py',
    'numbed.py',
    'ognfunc.py',
    'polynomials_dz.py',
    'prime_tests.py',
    'Rn_vectors_v3_0.py',
    'speedometer.py',
]

py.install_sources(src_py)
