py = import('python').find_installation(pure: false, modules: ['matplotlib', 'numba'])

src_py = [
    'complex_dz.py',
    'integral_dz.py',
    'Matrix_dz.py',
    'merge_parallel.py',
    'numbed.py',
    'ognfunc.py',
    'Polynomials_dz.py',
    'prime_tests.py',
    'Rn_vectors_v3_0.py',
    'speedometer.py',
]

py.install_sources(src_py, subdir: 'ognevny-pie')
