[build-system]
build-backend = 'mesonpy'
requires = [
    'meson-python',
]

[project]
name = 'pie'
version = '0.0.0'
description = "some python code I wrote for school"
authors = [
    { name = 'Maksim Bondarenkov', email = 'maksapple2306@gmail.com' },
]
dependencies = [
    'matplotlib',
    'numba>=0.59.0',
]
license = { file = "../LICENSE" }
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "B905",
    "D",
    "INP001",
    "PLR2004",
    "RUF002",
    "RUF003",
    "T201",
]
