[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'pie'
version = '0.0.0'
description = "some python code I wrote for school"
authors = [
    { name = 'Maksim Bondarenkov', email = 'maksapple2306@gmail.com' },
]
dependencies = [
    'matplotlib',
    'numba>=0.59.1',
]
license = { file = "../LICENSE" }
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "B905",
    "COM812",
    "D",
    "INP001",
    "ISC001",
    "PLR2004",
    "RUF002",
    "RUF003",
    "T201",
]
