[workspace]
members = [
    "first_word",
    "integral",
    "last_word",
    "longman",
    "pop",
    "speedometer",
    "tumba-umba",
    "mcko",
    "sfml_apps/*",
    "resheto",
    "mask1",
    "probnik",
    "ege1",
]
exclude = [
    "mytest",
    "for_lesson",
]
resolver = "2"

[profile.speedometer]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
lto = false
strip = false
opt-level = 0
