[workspace]
exclude = [
    "for_lesson",
    "mytest",
]
members = [
    "ege1",
    "ege2",
    "first_word",
    "integral",
    "last_word",
    "longman",
    "mask1",
    "mcko",
    "pop",
    "probnik",
    "resheto",
    "sfml_apps/*",
    "speedometer",
    "tumba-umba",
]
resolver = "2"

[profile.speedometer]
debug = false
debug-assertions = false
inherits = "dev"
lto = false
opt-level = 0
overflow-checks = false
strip = false
