[workspace]
exclude = [
    "for_lesson",
    "mytest",
]
members = [
    "ege1",
    "first_word",
    "integral",
    "last_word",
    "longman",
    "longman2",
    "mask1",
    "mcko",
    "pop",
    "probnik",
    "resheto",
    "sfml_apps/*",
    "speedometer",
    "tumba-umba",
]
resolver = "2"

[workspace.dependencies]
itertools = "0"
meval = { git = "https://github.com/Titaniumtown/meval-rs" }
rayon = "1"
regex = "1"
scan_fmt = "0"
sfml = "0.21"

[profile.speedometer]
debug = false
debug-assertions = false
inherits = "dev"
lto = false
opt-level = 0
overflow-checks = false
strip = false
