[package]
name = "ognlib"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Some code that is written to practice Rust"
authors = ["Maksim Bondarenkov"]
repository = "https://github.com/ognevnydemon/my-code/tree/master/rusted/ognlib"

[dependencies]
rayon = "1.7.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
